samples/_failures_safe/1761339174_1a0b8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74b12480.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_74b12480.c:122:38: error: expected ‘)’ at end of input
  122 |                         if (val_b > 0
      |                            ~         ^
      |                                      )
./samples/SAFE/__tmp_74b12480.c:122:25: error: expected declaration or statement at end of input
  122 |                         if (val_b > 0
      |                         ^~
./samples/SAFE/__tmp_74b12480.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74b12480.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74b12480.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74b12480.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74b12480.c:122:25: error: expected declaration or statement at end of input
